# stream-validator-saas

./: .env.example  README.md  docker-compose.yml
dev/: data.sql  seed.sql
playback_service/: Cargo.toml  Dockerfile
playback_service/src/: main.rs
playback_service/src/client/: db_client.rs  mod.rs
playback_service/src/messages/: messages.rs
playback_service/src/models/: models.rs
playback_service/src/video/: video.rs
producer_service/: Cargo.toml  Dockerfile
producer_service/src/: main.rs
producer_service/src/client/: db_client.rs  rabbit_client.rs
producer_service/src/models/: models.rs
template/: Cargo.toml
