[package]
name = "playback_service"
version = "0.1.0"
edition = "2024"

[dependencies]
postgrest = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json ="*"
dotenv = "*"
chrono = { version = "0.4", features = ["serde"] }
tokio-amqp = "2.0.0"
lapin="*"
futures="*"
async-nats = "0.40.0"
bytes = "*"