[package]
name = "producer_service"
version = "0.1.0"
edition = "2024"

[dependencies]
postgrest = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json ="*"
dotenv = "*"
chrono = { version = "0.4", features = ["serde"] }
lapin = "2.1"  # Lapin version for interacting with RabbitMQ